src/tests/text_document/snapshots/texlab__tests__text_document__completion__entry_type_after_string.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%BIB main.bib\n%SRC @string{\n%CUR        ^\n%1.1  ^^^^^^\"#)?"
---
[
  {
    "kind": 1,
    "label": "string",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "string"
    }
  }
]
