src/tests/text_document/snapshots/texlab__tests__text_document__completion__entry_type_at_empty.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%BIB main.bib\n%SRC @\n%CUR  ^\"#)?"
---
[
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "article",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "article"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "artwork",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "artwork"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "audio",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "audio"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "bibnote",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "bibnote"
    }
  },
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "book",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "book"
    }
  }
]
