src/tests/text_document/snapshots/texlab__tests__text_document__completion__entry_type_before_article.snap
---
source: src/tests/text_document/completion.rs
expression: "complete(r#\"\n%BIB main.bib\n%SRC @article\n%CUR  ^\n%1.1  ^^^^^^^\"#)?"
---
[
  {
    "documentation": "[documentation]",
    "kind": 1,
    "label": "article",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "article"
    }
  }
]
